--- a/lista_tarefas/package.json
+++ b/lista_tarefas/package.json
@@ -1,51 +1,31 @@
 {
-  "name": "lista_tarefas",
-  "main": "expo-router/entry",
+  "name": "listatarefastype",
   "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll",
-    "lint": "expo lint"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~51.0.6",
-    "expo-constants": "~16.0.1",
-    "expo-font": "~12.0.5",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.12",
-    "expo-splash-screen": "~0.27.4",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
-    "expo-web-browser": "~13.0.3",
+    "@expo/metro-runtime": "~3.1.3",
+    "@react-native-community/async-storage": "^1.12.1",
+    "expo": "~50.0.14",
+    "expo-font": "~11.10.3",
+    "expo-status-bar": "~1.11.1",
+    "native-base": "^3.4.28",
+    "normalize-css-color": "^1.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
-    "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.10"
+    "react-native": "0.73.6",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-svg": "^12.1.1",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
-    "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.1",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "^5.1.3"
   },
   "private": true
 }
